# flower

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Flower.sln  readme.md
source/: CMakeLists.txt  icon.rc
source/editor/: builtin_resources.cpp  builtin_resources.h  editor.cpp  editor.h  editor_asset.cpp  editor_asset.h  main.cpp  selection.h  sequencer.cpp  sequencer.h  ui_string.h  widget.cpp  widget.h
source/editor/widgets/: asset_config.cpp  asset_config.h  console.cpp  console.h  content.cpp  content.h  detail.cpp  detail.h  dockspace.cpp  dockspace.h  downbar.cpp  downbar.h  hub.cpp  hub.h  node_detail.cpp  node_detail.h  project_content.cpp  project_content.h  project_hub.cpp  project_hub.h  render_manager.cpp  render_manager.h  scene_outliner.cpp  scene_outliner.h  transform_handle.cpp  transform_handle.h  viewport.cpp  viewport.h
source/engine/: engine.cpp  engine.h
source/engine/asset/: asset.cpp  asset.h  asset_archive.h  asset_common.cpp  asset_common.h  asset_manager.cpp  asset_manager.h  asset_material.cpp  asset_material.h  asset_pmx.cpp  asset_pmx.h  asset_registry.cpp  asset_registry.h  asset_staticmesh.cpp  asset_staticmesh.h  asset_system.cpp  asset_system.h  asset_texture.cpp  asset_texture.h  asset_vmd.cpp  asset_vmd.h  asset_wave.cpp  asset_wave.h  assimp_import.cpp  assimp_import.h  gltf_import.cpp  gltf_import.h  project.cpp  project.h  texture_helper.cpp  texture_helper.h
source/engine/graphics/: accelerate_struct.cpp  accelerate_struct.h  base.h  bindless.cpp  bindless.h  context.cpp  context.h  descriptor.cpp  descriptor.h  device.cpp  gpu.cpp  gpu_asset.cpp  gpu_asset.h  graphics.cpp  graphics.h  instance.cpp  log.cpp  log.h  pass.cpp  pass.h  pool.cpp  pool.h  query.cpp  query.h  resource.cpp  resource.h  sampler.cpp  sampler.h  shader.cpp  shader.h  spirv_reflect.h  swapchain.cpp  swapchain.h  uniform.cpp  uniform.h  uploader.cpp  uploader.h
source/engine/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_manager.cpp  imgui_manager.h  region_string.cpp  region_string.h  ui.cpp  ui.h
source/engine/profile/: profile.cpp  profile.h
source/engine/reflection/: reflection.cpp  reflection.h
source/engine/renderer/: deferred_renderer.cpp  deferred_renderer.h  fsr2.cpp  fsr2.h  fsr2_context.cpp  fsr2_context.h  reflection_capture_renderer.cpp  reflection_capture_renderer.h  render_functions.h  render_scene.cpp  render_scene.h  renderer.cpp  renderer.h  renderer_interface.cpp  renderer_interface.h  scene_textures.cpp  scene_textures.h
source/engine/rhi/: accelerate_struct.cpp  accelerate_struct.h  async_upload.cpp  async_upload.h  bindless.cpp  bindless.h  context.cpp  context.h  descriptor.cpp  device.cpp  dynamic_uniform_buffer.cpp  dynamic_uniform_buffer.h  gpu.cpp  gpu_asset.cpp  gpu_asset.h  instance.cpp  lazy_delete_resource.cpp  lazy_delete_resource.h  pass.cpp  pass.h  query.cpp  query.h  render_texture_pool.cpp  render_texture_pool.h  resource.cpp  resource.h  rhi.cpp  rhi.h  rhi_log.cpp  rhi_log.h  rhi_misc.h  sampler_cache.cpp  sampler_cache.h  shader_cache.cpp  shader_cache.h  ssbo_buffers.cpp  ssbo_buffers.h
source/engine/scene/: component.cpp  component.h  scene.cpp  scene.h  scene_archive.h  scene_common.h  scene_graph.cpp  scene_graph.h  scene_manager.cpp  scene_manager.h  scene_node.cpp  scene_node.h
source/engine/serialization/: serialization.h
source/engine/ui/: ui.cpp  ui.h  widget.cpp  widget.h
source/engine/util/: AudioFile.h  allocator.h  assimp_helper.cpp  assimp_helper.h  camera_interface.cpp  camera_interface.h  config.cpp  config.h  crc.h  cvars.cpp  cvars.h  delegate.h  engine.cpp  engine.h  framework.cpp  framework.h  gltf.cpp  gltf.h  keycode.h  log.cpp  log.h  lru.h  macro.h  math.h  mesh_misc.h  noncopyable.h  openal.h  shader_struct.cpp  shader_struct.h  threadpool.cpp  threadpool.h  timer.h  util.cpp  util.h  uuid.cpp  window_data.cpp  window_data.h
source/engine/utils/: allocator.h  base.h  cacheline.h  camera_interface.cpp  camera_interface.h  compile_random.h  crc.cpp  crc.h  cvars.cpp  cvars.h  delegate.cpp  delegate.h  glfw.cpp  glfw.h  log.cpp  log.h  lru.h  math.cpp  math.h  threadpool.h  timer.h  utils.cpp  utils.h  uuid.cpp  uuid.h
source/shader/: compile_all.bat  grid.glsl  hzb.glsl  pick.glsl  selection_outline.glsl
source/shader/atmosphere/: air_perspective.glsl  atmosphere_common.glsl  bake_capture.glsl  compile.bat  composition.glsl  multi_scatter_lut.glsl  skyview_lut.glsl  transmittance_lut.glsl
source/shader/autoexposure/: compile.cmd  exposure_average.glsl  exposure_common.glsl  exposure_histogram.glsl
source/shader/bloom/: bloom_common.glsl  bloom_downsample.glsl  bloom_upscale.glsl  compile.cmd
source/shader/cbt/: README.md  cbt.glsl  cbt.h  cbt_dispatcher.glsl  cbt_sumReduction.glsl  cbt_sumReductionPrepass.glsl  compile.cmd  shared_cbt.glsl
source/shader/cloud/: cloud_basicnoise.glsl  cloud_common.glsl  cloud_composite.glsl  cloud_noise_common.glsl  cloud_raymarching.glsl  cloud_reconstruct.glsl  compile.cmd  lens_buffer.glsl
source/shader/common/: shared_aces.glsl  shared_atmosphere.glsl  shared_bluenoise.glsl  shared_functions.glsl  shared_lighting.glsl  shared_sampler.glsl  shared_shading_model.glsl  shared_shadow.glsl  shared_struct.glsl
source/shader/downsample/: compile.cmd  gaussian.glsl  point.glsl  point4.glsl
source/shader/gtao/: compile.cmd  gtao_common.glsl  gtao_evaluate.glsl  gtao_prefilter.glsl
source/shader/leb/: LICENSE.txt  README.md  leb.glsl  leb.h
source/shader/lighting/: brdf_lut.glsl  compile.bat  deferred_lighting.glsl  skylight.glsl  skyreflection.glsl
source/shader/mesh/: compile.bat  staticmesh_after_prepass_cull.glsl  staticmesh_gbuffer.glsl  staticmesh_prepass.glsl  staticmesh_prepass_cull.glsl
source/shader/pmx/: compile.bat  pmx_common.glsl  pmx_gbuffer.glsl  pmx_outline_depth.glsl  pmx_sdsm_depth.glsl  pmx_translucency.glsl
source/shader/postprocess/: combine.glsl  compile.bat  exposure_apply.glsl  exposure_weight.glsl  fusion.glsl  fusion_blend.glsl  (+9 more)
(+835 files in other folders)
